# spo-codebase

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  LICENSE  README.md
examples/: example_guess.json  example_knn_param.json  example_knn_param2.json  example_modelgen_param.json  example_param.txt  example_sideinfo.txt  example_statgen_param.json  example_statgen_param2.json  example_statmodel.json  example_transport.json  example_vendor_paramset2item.json
include/oafitting/: linreg.hpp  oafit.hpp  oafitio.hpp  stochprogram.hpp  transport.hpp  vendor.hpp
pythonscripts/: makevendordata.py  transporttests.py
src/: linreg.cpp  oafit.cpp  oafitio.cpp  runlr.cpp  runoafit.cpp  runrf.cpp  runtrial.cpp  stochprogram.cpp  transport.cpp  vendor.cpp
test/: oafit_tests.cpp
